--- a/ex_4/makefile
+++ b/ex_4/makefile
@@ -11,7 +11,7 @@ SOURCE1	= TCPClient.cpp client.cpp
 HEADER1 = TCPClient.h
 OUT1 = client.out
 
-OBJ2 = Algorithm.o Classifiable.o Distance.o Initializer.o KNN.o Reader.o KnnData.o ChangeSetsCommand.o \
+OBJS2 = Algorithm.o Classifiable.o Distance.o Initializer.o KNN.o Reader.o KnnData.o ChangeSetsCommand.o \
 	UploadCommand.o DownloadResultsCommand.o DisplayStringCommand.o ClassifyCommand.o CLI.o StandardIO.o
 SOURCE2 = Algorithm.cpp Classifiable.cpp Distance.cpp Initializer.cpp KNN.cpp Reader.cpp KnnData.cpp ChangeSetsCommand.cpp \
 	UploadCommand.cpp DownloadResultsCommand.cpp DisplayStringCommand.cpp ClassifyCommand.cpp CLI.cpp StandardIO.cpp
